# test_text_search

./: .env.example  README.md  alembic.ini  docker-compose.yaml  dockerfile  docs.json  pyproject.toml
src/app/: main.py
src/app/api/: excpetions_autodocs.py
src/app/api/v1/: dto.py  posts.py
src/app/containers/: controllers.py  infrastructure.py
src/app/system/: resources.py
src/core/: config.py  logger.py
src/core/entities/: post.py
src/core/exceptions/: base.py  posts.py
src/core/exceptions/handlers/: api_exception_handler.py  db_handler.py  search_db_handler.py  validation_handler.py
src/core/exceptions/schemas/: detail.py  main.py
src/core/usecases/posts/: protocol.py  usecases.py
src/infrastructure/db/: engine.py
src/infrastructure/db/elastic/: engine.py
src/infrastructure/db/elastic/gateways/: posts.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/postgres/: engine.py
src/infrastructure/db/postgres/gateways/: posts.py
src/infrastructure/db/postgres/migrations/: env.py
src/infrastructure/db/postgres/migrations/versions/: 2aba03ad1aeb_first_migration.py
src/infrastructure/db/postgres/schemas/: post.py
src/infrastructure/db/schemas/: post.py
tests/: conftest.py  test_posts_api.py
